--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,7 @@
-/* Add CSS rules to override Primer */
+/* Add CSS rules to override Pico */
+
+@media (min-width: 1024px) {
+    .container {
+        max-width: 768px;
+    }
+}
